before creating pushnotification

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,5 +1,39 @@
 {
-  "title": "Hello",
-  "greeting": "Welcome to the app",
-  "change_language": "Change Language"
+  "bottombar dashboard": "Dashboard",
+  "bottombar new": "New",
+  "bottombar mycomplaints": "My Complaints",
+  "bottombar profile": "Profile",
+  "bottombar settings": "Settings",
+  "dashboard title": "Dashboard",
+  "dashboard indianrailways": "Indian Railways",
+  "dashboard subheading": "Quarters Complaint Management System",
+  "dashboard crisant": "Designed & Developed by Crisant technologies",
+  "dashboard totalcomplaints": "Total Complaints",
+  "dashboard opencomplaints": "Open Complaints",
+  "dashboard assignedcomplaints": "Assigned Complaints",
+  "dashboard resolvedcomplaints": "Resolved Complaints",
+  "dashboard newcomplaints": "New Complaints",
+  "dashboard viewcomplaints": "View Complaints",
+  "newcomplaint title": "New Complaint",
+  "newcomplaint registernewcomplaint": "Register New Complaint",
+  "newcomplaint subheading": "Kindly select the relevant details and proceed to submit your complaint",
+  "newcomplaint department": "Department*",
+  "newcomplaint complaintcategory": "Complaint Category*",
+  "newcomplaint prefereddateandtime artisanvisit": "Preferred Date & Time for Artisan's visit",
+  "newcomplaint remarks": "Remarks (Optional)",
+  "newcomplaint uploadimage": "Upload Image",
+  "newcomplaint submitbutton":"Submit Complaint",
+  "mycomplaints viewcomplaint":"View Complaints",
+  "mycomplaints subheadline":"Please track all your complaints from here",
+  "complaintdetails title":"Complaint Details",
+  "complaintdetails goback":"Go Back",
+  "complaintdetails cancelcomplaint":"Cancel Complaint",
+  "profile title":"My Profile",
+  "settings title":"Settings",
+  "settings subtitle":"Customize your preferences",
+  "settings general":"General",
+  "settings language":"Language",
+  "settings notifications":"Notifications",
+  "settings account":"Account",
+  "settings logout":"Logout"
 }
