notification is completed

--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -1,17 +1,39 @@
 {
-    "bottombar dashboard": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್",
-    "bottombar new": "ಹೊಸದು",
-    "bottombar mycomplaints": "ನನ್ನ ದೂರುಗಳು",
-    "bottombar profile": "ಪ್ರೊಫೈಲ್",
-    "bottombar settings": "ಸೆಟ್ಟಿಂಗ್‌ಗಳು",
-    "dashboard title": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್",
-    "dashboard indianrailways": "ಭಾರತೀಯ ರೈಲ್ವೆ",
-    "dashboard subheading": "ಕ್ವಾರ್ಟರ್‌ಗಳ ದೂರು ನಿರ್ವಹಣಾ ವ್ಯವಸ್ಥೆ",
-    "dashboard crisant": "ಕ್ರಿಸಾಂಟ್ ತಂತ್ರಜ್ಞಾನಗಳಿಂದ ವಿನ್ಯಾಸಗೊಳಿಸಿ ಅಭಿವೃದ್ಧಿಪಡಿಸಲಾಗಿದೆ",
-    "dashboard totalcomplaints": "ಒಟ್ಟು ದೂರುಗಳು",
-    "dashboard opencomplaints": "ತೆರೆದ ದೂರುಗಳು",
-    "dashboard assignedcomplaints": "ಹಂಚಿದ ದೂರುಗಳು",
-    "dashboard resolvedcomplaints": "ಪರಿಹರಿಸಿದ ದೂರುಗಳು",
-    "dashboard newcomplaints": "ಹೊಸ ದೂರುಗಳು",
-    "dashboard viewcomplaints": "ದುರುಗಳನ್ನು ವೀಕ್ಷಿಸಿ"
+  "bottombar dashboard": "ಡ್ಯಾಶ್ಬೋರ್ಡ್",
+  "bottombar new": "ಹೆಚ್ಚಿನ",
+  "bottombar mycomplaints": "ನನ್ನ ಫಿರ್ಯಾದಿಗಳು",
+  "bottombar profile": "ಪ್ರೊಫೈಲ್",
+  "bottombar settings": "ಸೆಟ್ಟಿಂಗ್ಗಳು",
+  "dashboard title": "ಡ್ಯಾಶ್ಬೋರ್ಡ್",
+  "dashboard indianrailways": "ಭಾರತೀಯ ರೈಲು",
+  "dashboard subheading": "ಕೋಂಟರ್ಸ್ ದೂರ್ಘಟನಾ ನಿರ್ವಹಣಾ ವ್ಯವಸ್ಥೆ",
+  "dashboard crisant": "ವಿಕಸಿತ ಮತ್ತು ವಿನ್ಯಾಸ - CrisᏙant ತಂತ್ರಜ್ಞಾನಗಳೊಂದಿಗೆ",
+  "dashboard totalcomplaints": "ಒಟ್ಟು klachten",
+  "dashboard opencomplaints": "ತೆರೆದ klachten",
+  "dashboard assignedcomplaints": "ಹಂಚಿದ klachten",
+  "dashboard resolvedcomplaints": "ತೆರೆಗೆತ್ತಿದ klachten",
+  "dashboard newcomplaints": "ಹೊಸ klachten",
+  "dashboard viewcomplaints": "klachten ವೀಕ್ಷಿಸಿ",
+  "newcomplaint title": "ಹೊಸ klacht",
+  "newcomplaint registernewcomplaint": "ಹೊಸ klacht ನೋಂದಾಯಿಸಿ",
+  "newcomplaint subheading": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿಸಿದ ವಿವರಗಳನ್ನು ಆಯ್ಕೆ ಮಾಡಿ ಮತ್ತು ನಿಮ್ಮ klacht ಸಲ್ಲಿಸಿ",
+  "newcomplaint department": "ವिभಾಗ*",
+  "newcomplaint complaintcategory": "KLACHT ವರ್ಗ*",
+  "newcomplaint prefereddateandtime artisanvisit": "ಶಿಲ್ಪಿ ಭೇಟಿ-ಗೆ ಪ್ರಾಶಸ್ತ್ಯದ ದಿನಾಂಕ ಮತ್ತು ಸಮಯ",
+  "newcomplaint remarks": "ಮತಗಳು (ಐಚ್ಛಿಕ)",
+  "newcomplaint uploadimage": "ಚಿತ್ರ ಅಪ್‌ಲೋಡ್ ಮಾಡಿ",
+  "newcomplaint submitbutton": "KLACHT ಸಲ್ಲಿಸಿ",
+  "mycomplaints viewcomplaint": "KLACHT ವೀಕ್ಷಿಸಿ",
+  "mycomplaints subheadline": "ದಯವಿಟ್ಟು ಇಲ್ಲಿಂದ ನಿಮ್ಮ ಎಲ್ಲಾ klachten ಅನ್ವಯಿಸು ನಿಗದಿಪಡಿಸಿ",
+  "complaintdetails title": "KLACHT ವಿವರಗಳು",
+  "complaintdetails goback": "ಹಿನ್ನೆಲೆ ಹೋಗಿ",
+  "complaintdetails cancelcomplaint": "KLACHT ರದ್ದು ಮಾಡಿರಿ",
+  "profile title": "ನನ್ನ ಪ್ರೊಫೈಲ್",
+  "settings title": "ಸೆಟ್ಟಿಂಗ್ಗಳು",
+  "settings subtitle": "ನಿಮ್ಮ ಆಧ್ಯಕ್ತತೆಗಳನ್ನು ಹೊಂದಿಸಿ",
+  "settings general": "ಸಾಮಾನ್ಯ",
+  "settings language": "ಭಾಷೆ",
+  "settings notifications": "ಅಧ್ಯಾವಧಿ",
+  "settings account": "ಖಾತೆ",
+  "settings logout": "ಲಾಗ್ ಔಟ್"
 }
