--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -1,17 +1,39 @@
 {
-    "bottombar dashboard": "डैशबोर्ड",
-    "bottombar new": "नया",
-    "bottombar mycomplaints": "मेरी शिकायतें",
-    "bottombar profile": "प्रोफ़ाइल",
-    "bottombar settings": "सेटिंग्स",
-    "dashboard title": "डैशबोर्ड",
-    "dashboard indianrailways": "भारतीय रेल",
-    "dashboard subheading": "क्वार्टर शिकायत प्रबंधन प्रणाली",
-    "dashboard crisant": "क्रिसेंट टेक्नोलॉजीज द्वारा डिज़ाइन और विकसित",
-    "dashboard totalcomplaints": "कुल शिकायतें",
-    "dashboard opencomplaints": "खुली शिकायतें",
-    "dashboard assignedcomplaints": "सौंपे गए शिकायतें",
-    "dashboard resolvedcomplaints": "सुलझी शिकायतें",
-    "dashboard newcomplaints": "नई शिकायतें",
-    "dashboard viewcomplaints": "शिकायतें देखें"
+  "bottombar dashboard": "डैशबोर्ड",
+  "bottombar new": "नया",
+  "bottombar mycomplaints": "मेरी शिकायतें",
+  "bottombar profile": "प्रोफ़ाइल",
+  "bottombar settings": "सेटिंग्स",
+  "dashboard title": "डैशबोर्ड",
+  "dashboard indianrailways": "भारतीय रेल",
+  "dashboard subheading": "क्वार्टर्स शिकायत प्रबंधन प्रणाली",
+  "dashboard crisant": "डिज़ाइन एवं विकास - क्रिसेंट टेक्नोलॉजीज़ द्वारा",
+  "dashboard totalcomplaints": "कुल शिकायतें",
+  "dashboard opencomplaints": "खुली शिकायतें",
+  "dashboard assignedcomplaints": "सौंपीं गई शिकायतें",
+  "dashboard resolvedcomplaints": "निपटाई गई शिकायतें",
+  "dashboard newcomplaints": "नई शिकायतें",
+  "dashboard viewcomplaints": "शिकायतें देखें",
+  "newcomplaint title": "नई शिकायत",
+  "newcomplaint registernewcomplaint": "नई शिकायत दर्ज करें",
+  "newcomplaint subheading": "कृपया संबंधित विवरण चुनें और अपनी शिकायत सबमिट करें",
+  "newcomplaint department": "विभाग*",
+  "newcomplaint complaintcategory": "शिकायत श्रेणी*",
+  "newcomplaint prefereddateandtime artisanvisit": "शिल्पकार के आने के लिए पसंदीदा दिनांक और समय",
+  "newcomplaint remarks": "टिप्पणियाँ (वैकल्पिक)",
+  "newcomplaint uploadimage": "छवि अपलोड करें",
+  "newcomplaint submitbutton": "शिकायत सबमिट करें",
+  "mycomplaints viewcomplaint": "शिकायतें देखें",
+  "mycomplaints subheadline": "कृपया यहाँ से अपनी सभी शिकायतों पर नज़र रखें",
+  "complaintdetails title": "शिकायत विवरण",
+  "complaintdetails goback": "वापस जाएँ",
+  "complaintdetails cancelcomplaint": "शिकायत रद्द करें",
+  "profile title": "मेरी प्रोफ़ाइल",
+  "settings title": "सेटिंग्स",
+  "settings subtitle": "अपनी प्राथमिकताएँ अनुकूलित करें",
+  "settings general": "सामान्य",
+  "settings language": "भाषा",
+  "settings notifications": "सूचनाएँ",
+  "settings account": "खाता",
+  "settings logout": "लॉग आउट"
 }
