--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -1,39 +1,39 @@
 {
-  "bottombar dashboard": "ಡ್ಯಾಶ್ಬೋರ್ಡ್",
-  "bottombar new": "ಹೆಚ್ಚಿನ",
-  "bottombar mycomplaints": "ನನ್ನ ಫಿರ್ಯಾದಿಗಳು",
-  "bottombar profile": "ಪ್ರೊಫೈಲ್",
-  "bottombar settings": "ಸೆಟ್ಟಿಂಗ್ಗಳು",
-  "dashboard title": "ಡ್ಯಾಶ್ಬೋರ್ಡ್",
-  "dashboard indianrailways": "ಭಾರತೀಯ ರೈಲು",
-  "dashboard subheading": "ಕೋಂಟರ್ಸ್ ದೂರ್ಘಟನಾ ನಿರ್ವಹಣಾ ವ್ಯವಸ್ಥೆ",
-  "dashboard crisant": "ವಿಕಸಿತ ಮತ್ತು ವಿನ್ಯಾಸ - CrisᏙant ತಂತ್ರಜ್ಞಾನಗಳೊಂದಿಗೆ",
-  "dashboard totalcomplaints": "ಒಟ್ಟು klachten",
-  "dashboard opencomplaints": "ತೆರೆದ klachten",
-  "dashboard assignedcomplaints": "ಹಂಚಿದ klachten",
-  "dashboard resolvedcomplaints": "ತೆರೆಗೆತ್ತಿದ klachten",
-  "dashboard newcomplaints": "ಹೊಸ klachten",
-  "dashboard viewcomplaints": "klachten ವೀಕ್ಷಿಸಿ",
-  "newcomplaint title": "ಹೊಸ klacht",
-  "newcomplaint registernewcomplaint": "ಹೊಸ klacht ನೋಂದಾಯಿಸಿ",
-  "newcomplaint subheading": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿಸಿದ ವಿವರಗಳನ್ನು ಆಯ್ಕೆ ಮಾಡಿ ಮತ್ತು ನಿಮ್ಮ klacht ಸಲ್ಲಿಸಿ",
-  "newcomplaint department": "ವिभಾಗ*",
-  "newcomplaint complaintcategory": "KLACHT ವರ್ಗ*",
-  "newcomplaint prefereddateandtime artisanvisit": "ಶಿಲ್ಪಿ ಭೇಟಿ-ಗೆ ಪ್ರಾಶಸ್ತ್ಯದ ದಿನಾಂಕ ಮತ್ತು ಸಮಯ",
-  "newcomplaint remarks": "ಮತಗಳು (ಐಚ್ಛಿಕ)",
-  "newcomplaint uploadimage": "ಚಿತ್ರ ಅಪ್‌ಲೋಡ್ ಮಾಡಿ",
-  "newcomplaint submitbutton": "KLACHT ಸಲ್ಲಿಸಿ",
-  "mycomplaints viewcomplaint": "KLACHT ವೀಕ್ಷಿಸಿ",
-  "mycomplaints subheadline": "ದಯವಿಟ್ಟು ಇಲ್ಲಿಂದ ನಿಮ್ಮ ಎಲ್ಲಾ klachten ಅನ್ವಯಿಸು ನಿಗದಿಪಡಿಸಿ",
-  "complaintdetails title": "KLACHT ವಿವರಗಳು",
-  "complaintdetails goback": "ಹಿನ್ನೆಲೆ ಹೋಗಿ",
-  "complaintdetails cancelcomplaint": "KLACHT ರದ್ದು ಮಾಡಿರಿ",
-  "profile title": "ನನ್ನ ಪ್ರೊಫೈಲ್",
-  "settings title": "ಸೆಟ್ಟಿಂಗ್ಗಳು",
-  "settings subtitle": "ನಿಮ್ಮ ಆಧ್ಯಕ್ತತೆಗಳನ್ನು ಹೊಂದಿಸಿ",
+  "bottombar dashboard": "ಡ್ಯಾಶ್ ಬೋರ್ಡ್",
+  "bottombar new": "ನವೀನ",
+  "bottombar mycomplaints": "ನನ್ನ ದೂರುಗಳು",
+  "bottombar profile": "ವ್ಯಕ್ತಿಚಿತ್ರ",
+  "bottombar settings": "ಸಂಯೋಜನೆಗಳು",
+  "dashboard title": "ಡ್ಯಾಶ್ ಬೋರ್ಡ್",
+  "dashboard indianrailways": "ಭಾರತೀಯ ರೈಲ್ವೆ ",
+  "dashboard subheading": "ವಸತಿಗೃಹಗಳ ದೂರು ನಿರ್ವಹಣಾ ವ್ಯವಸ್ಥೆ",
+  "dashboard crisant": "ವಿನ್ಯಾಸ ಮತ್ತು ನಿರ್ಮಾಣ: ಕ್ರೈಸೆಂಟ್ ಟೆಕ್ನಾಲಜೀಸ್",
+  "dashboard totalcomplaints": "ಒಟ್ಟು ದೂರುಗಳು",
+  "dashboard opencomplaints": "ಬಗೆಹರಿಸಬೇಕಾದ ದೂರುಗಳು",
+  "dashboard assignedcomplaints": "ನಿಯೋಜಿತ ದೂರುಗಳು",
+  "dashboard resolvedcomplaints": "ಬಗೆಹರಿಸಿದ ದೂರುಗಳು",
+  "dashboard newcomplaints": "ಹೊಸ ದೂರುಗಳು",
+  "dashboard viewcomplaints": "ದೂರುಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
+  "newcomplaint title": "ಹೊಸ ದೂರು",
+  "newcomplaint registernewcomplaint": "ಹೊಸ ದೂರು ದಾಖಲಿಸಿ",
+  "newcomplaint subheading": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿತ ವಿವರಗಳನ್ನು ಆಯ್ದುಕೊಂಡು ದೂರು ಸಲ್ಲಿಸಲು ಮುಂದುವರಿಯಿರಿ",
+  "newcomplaint department": "ಇಲಾಖೆ*",
+  "newcomplaint complaintcategory": "ದೂರಿನ ವರ್ಗ*",
+  "newcomplaint prefereddateandtime artisanvisit": "ಕುಶಲ ಕರ್ಮಿಯ ಭೇಟಿಗೆ ಬಯಸಿದ ದಿನ ಮತ್ತು ಸಮಯ",
+  "newcomplaint remarks": "ಷರಾ (ಐಚ್ಛಿಕ)",
+  "newcomplaint uploadimage": "ಚಿತ್ರವನ್ನು ಅಪ್‌ಲೋಡ್ ಮಾಡಿ",
+  "newcomplaint submitbutton": "ದೂರು ಸಲ್ಲಿಸಿ",
+  "mycomplaints viewcomplaint": "ದೂರುಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
+  "mycomplaints subheadline": "ಇಲ್ಲಿ ನಿಮ್ಮ ಎಲ್ಲ ದೂರುಗಳ ಜಾಡು ಹಿಡಿಯಿರಿ",
+  "complaintdetails title": "ದೂರಿನ ವಿವರ",
+  "complaintdetails goback": "ಹಿಂದೆ ಹೋಗಿ",
+  "complaintdetails cancelcomplaint": "ದೂರನ್ನು ರದ್ದುಪಡಿಸಿ",
+  "profile title": "ನನ್ನ ವ್ಯಕ್ತಿಚಿತ್ರ",
+  "settings title": "ಸಂಯೋಜನೆಗಳು",
+  "settings subtitle": "ನಿಮ್ಮ ಆದ್ಯತೆಗಳಿಗನುಗುಣವಾಗಿ ಬದಲಿಸಿ",
   "settings general": "ಸಾಮಾನ್ಯ",
   "settings language": "ಭಾಷೆ",
-  "settings notifications": "ಅಧ್ಯಾವಧಿ",
+  "settings notifications": "ಸೂಚನೆಗಳು",
   "settings account": "ಖಾತೆ",
-  "settings logout": "ಲಾಗ್ ಔಟ್"
+  "settings logout": "ನಿರ್ಗಮನ"
 }
